# voice-changer

./: HOW_TO_BUILD_FROM_PHONE.md  README.md
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  effects.cpp  effects.h  formant_shifter.cpp  formant_shifter.h  native-lib.cpp  pitch_shifter.cpp  pitch_shifter.h
app/src/main/java/com/voicechanger/app/: MainActivity.kt  VoiceChangerApplication.kt
app/src/main/java/com/voicechanger/app/ai_model/: ModelFactory.kt  OnnxVoiceConversionModel.kt  PassThroughModel.kt  TFLiteVoiceConversionModel.kt  VoiceConversionModel.kt
app/src/main/java/com/voicechanger/app/audio_engine/: AudioEngine.kt  AudioEngineService.kt
app/src/main/java/com/voicechanger/app/data/repository/: AudioEngineRepositoryImpl.kt  VoiceModelRepositoryImpl.kt
app/src/main/java/com/voicechanger/app/di/: AiModelModule.kt  AudioModule.kt
app/src/main/java/com/voicechanger/app/domain/model/: EffectParams.kt  EngineState.kt  VoicePreset.kt
app/src/main/java/com/voicechanger/app/domain/repository/: AudioEngineRepository.kt  VoiceModelRepository.kt
app/src/main/java/com/voicechanger/app/domain/usecase/: ApplyPresetUseCase.kt  LoadVoiceModelUseCase.kt  StartVoiceChangerUseCase.kt  StopVoiceChangerUseCase.kt  UpdateEffectParamsUseCase.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
(+7 files in other folders)
